package org.example;

public class Crossing {
    
}
