package org.example;

public interface CrossingPublisher {
    public void publish(Crossing crossing);
}