package org.example;

public class RabbitCrossingPublisher implements CrossingPublisher {

    @Override
    public void publish(Crossing crossing) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'publish'");
    }
    
}
